WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29495
Element is misplaced during opacity transition with certain configuration of transform-origin and clipping
https://bugs.webkit.org/show_bug.cgi?id=29495
Summary
Element is misplaced during opacity transition with certain configuration of ...
Simon Fraser (smfr)
Reported
2009-09-18 10:35:31 PDT
Created
attachment 39768
[details]
Testcase The attached testcase shows a bug where items are misplaced during the opacity transition. What's special about this is that there's a zero-size item with a transform-origin, and a parent with clipping.
Attachments
Testcase
(1.40 KB, text/html)
2009-09-18 10:35 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(11.23 KB, patch)
2009-09-18 17:38 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-09-18 10:36:44 PDT
<
rdar://problem/7235567
>
Simon Fraser (smfr)
Comment 2
2009-09-18 17:38:42 PDT
Created
attachment 39806
[details]
Patch, testcase, changelog
mitz
Comment 3
2009-09-18 18:23:44 PDT
Comment on
attachment 39806
[details]
Patch, testcase, changelog The style guidelines don't allow "!= 0". Please change that.
Simon Fraser (smfr)
Comment 4
2009-09-18 20:46:19 PDT
http://trac.webkit.org/changeset/48546
and
http://trac.webkit.org/changeset/48547
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug